资源管理  代理人管理

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,7 +3,14 @@
 .cus-table-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 16px;
+
+    .btns {
+        .ant-btn {
+            margin-left: 16px;
+        }
+    }
 }
 
 .cus-input-group {
@@ -85,6 +92,10 @@
 
 .ant-select {
     width: 100%;
+}
+
+.ant-drawer-content-wrapper {
+    min-width: 400px;
 }
 
 .ant-drawer-header {
